--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,5 +1,11 @@
-<app-navbar></app-navbar>
+<div class="flex flex-col min-h-screen">
 
-<main class="container mt-3">
-  <router-outlet></router-outlet>
-</main>
+  <app-navbar></app-navbar>
+
+  <main class="flex-grow container mx-auto p-4">
+    <router-outlet></router-outlet>
+  </main>
+
+  <app-footer></app-footer>
+
+</div>
