--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -2,7 +2,7 @@
 
   <app-navbar></app-navbar>
 
-  <main class="flex-grow container mx-auto p-4">
+  <main class="flex-grow container mx-auto px-4 py-8">
     <router-outlet></router-outlet>
   </main>
 
