--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,11 +1,11 @@
 <div class="flex flex-col min-h-screen">
 
-  <app-navbar></app-navbar>
+  <app-navbar/>
 
   <main class="flex-grow container mx-auto px-4 py-8">
-    <router-outlet></router-outlet>
+    <router-outlet/>
   </main>
 
-  <app-footer></app-footer>
+  <app-footer/>
 
 </div>
