--- a/src/app/features/auth/components/login-form/login-form.component.html
+++ b/src/app/features/auth/components/login-form/login-form.component.html
@@ -56,7 +56,7 @@
       <label for="remember-me" class="ml-2 block text-sm text-gray-900">Recuérdame</label>
     </div>
     <div class="text-sm">
-      <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">¿Olvidaste tu contraseña?</a>
+      <a routerLink="/forgot-password" class="font-medium text-indigo-600 hover:text-indigo-500">¿Olvidaste tu contraseña?</a>
     </div>
   </div>
 
