cambios para ver la imagen de perfil en la pagina de perfil

--- a/src/app/features/usuarios/components/avatar/avatar.component.html
+++ b/src/app/features/usuarios/components/avatar/avatar.component.html
@@ -9,7 +9,7 @@
 
   <label
     for="avatar-upload"
-    class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-0 group-hover:bg-opacity-50 rounded-full cursor-pointer transition-opacity duration-300">
+    class="absolute inset-0 flex items-center justify-center bg-transparent group-hover:bg-black/50 rounded-full cursor-pointer transition-all duration-300">
     <span class="text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z" />
