--- a/src/app/features/recetas/pages/recipe-detail-page/recipe-detail-page.component.html
+++ b/src/app/features/recetas/pages/recipe-detail-page/recipe-detail-page.component.html
@@ -55,7 +55,7 @@
                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" /></svg>
               <div>
                 <p class="text-sm text-gray-500">Creado por</p>
-                <p class="font-bold">{{ receta()!.creatorId }}</p>
+                <p class="font-bold">{{ receta()!.nombreCreador }}</p>
               </div>
             </div>
            }
