Se añade el calculo de valor nutricional de la receta

--- a/src/app/features/recetas/pages/recipe-detail-page/recipe-detail-page.component.html
+++ b/src/app/features/recetas/pages/recipe-detail-page/recipe-detail-page.component.html
@@ -86,6 +86,8 @@
                     <p><strong>Grasas:</strong> {{ receta()!.grasasTotales || 0 }} g</p>
                     <p><strong>Proteínas:</strong> {{ receta()!.proteinasTotales || 0 }} g</p>
                     <p><strong>Carbohidratos:</strong> {{ receta()!.carbohidratosTotales || 0 }} g</p>
+                    <p><strong>Azúcares:</strong> {{ receta()!.azuacaresTotales || 0 }} g</p>
+                    <p><strong>Sodio:</strong> {{ receta()!.sodioTotal || 0 }} mg</p>
                 </div>
             </section>
           </div>
