--- a/src/app/features/recetas/pages/recipe-detail-page/recipe-detail-page.component.html
+++ b/src/app/features/recetas/pages/recipe-detail-page/recipe-detail-page.component.html
@@ -95,14 +95,11 @@
           <div class="lg:col-span-2">
             <section>
                <h2 class="text-2xl font-bold text-gray-800 border-b-2 border-sky-500 pb-2 mb-4">Preparación</h2>
-               @if (receta()!.pasos && receta()!.pasos!.length > 0) {
+               @if (receta()!.preparacion?.trim()?.length) {
                   <ol class="space-y-6">
-                    @for (paso of receta()!.pasos; track $index; let i = $index) {
                       <li class="flex">
-                        <span class="flex items-center justify-center bg-sky-500 text-white font-bold rounded-full h-8 w-8 mr-4 flex-shrink-0">{{ i + 1 }}</span>
-                        <p class="text-gray-700 self-center">{{ paso }}</p>
+                        <p class="text-gray-700 self-center">{{ receta()!.preparacion }}</p>
                       </li>
-                    }
                   </ol>
                } @else {
                   <p class="text-gray-500 italic">No hay pasos de preparación definidos.</p>
