--- a/src/app/features/recetas/components/recipe-card/recipe-card.component.html
+++ b/src/app/features/recetas/components/recipe-card/recipe-card.component.html
@@ -46,15 +46,14 @@
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 mr-1.5 text-gray-400">
               <path fill-rule="evenodd" d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16Zm-.75-13a.75.75 0 0 0-1.5 0v5c0 .414.336.75.75.75h4a.75.75 0 0 0 0-1.5h-3.25V5Z" clip-rule="evenodd" />
             </svg>
-              30min<!-- {{ receta.tiempoPreparacion }} -->
+              {{ receta.tiempoPreparacion }} min
           </span>
-          @if (receta.creatorId) { <!-- @if (receta.creador && receta.creador.nombre) { -->
-            <!-- <span class="truncate flex items-center" [title]="'Creado por: ' + receta.creador.nombre"> -->
-            <span class="truncate flex items-center" [title]="'Creado por: ' + receta.creatorId">
+          @if (receta.nombreCreador) {
+            <span class="truncate flex items-center" [title]="'Creado por: ' + receta.nombreCreador">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 mr-1.5 text-gray-400">
                 <path d="M10 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM3.465 14.493a1.23 1.23 0 0 0 .41 1.412A9.957 9.957 0 0 0 10 18c2.31 0 4.438-.784 6.131-2.1.43-.333.604-.903.408-1.41a7.002 7.002 0 0 0-13.074.003Z" />
               </svg>
-                {{ receta.creatorId }}<!-- {{ receta.creador.nombre }} -->
+                {{ receta.nombreCreador }}
             </span>
           }
         </div>
