--- a/src/app/features/recetas/pages/recipe-detail-page/recipe-detail-page.component.html
+++ b/src/app/features/recetas/pages/recipe-detail-page/recipe-detail-page.component.html
@@ -67,7 +67,7 @@
               <h2 class="text-2xl font-bold text-gray-800 border-b-2 border-sky-500 pb-2 mb-4">Ingredientes</h2>
                @if(receta()!.ingredientes && receta()!.ingredientes!.length > 0) {
                  <ul class="space-y-3 text-gray-700">
-                   @for (ingrediente of receta()!.ingredientes; track ingrediente.IdIngrediente) {
+                   @for (ingrediente of receta()!.ingredientes; track ingrediente.idIngrediente) {
                      <li class="flex items-center">
                        <span class="h-2 w-2 bg-sky-500 rounded-full mr-3"></span>
                        <span><span class="font-bold">{{ ingrediente.cantidad }} {{ ingrediente.unidadMedida }}</span> de {{ ingrediente.nombre }}</span>
