--- a/src/app/features/recetas/pages/recipe-detail-page/recipe-detail-page.component.html
+++ b/src/app/features/recetas/pages/recipe-detail-page/recipe-detail-page.component.html
@@ -96,12 +96,9 @@
             <section>
                <h2 class="text-2xl font-bold text-gray-800 border-b-2 border-sky-500 pb-2 mb-4">Preparación</h2>
                @if (receta()!.preparacion?.trim()?.length) {
-                  <ol class="space-y-6">
-                      <li class="flex">
-                        <p class="text-gray-700 self-center">{{ receta()!.preparacion }}</p>
-                      </li>
-                  </ol>
-               } @else {
+                  <div class="ql-editor" [innerHTML]="receta()!.preparacion">
+                    </div>
+                  } @else {
                   <p class="text-gray-500 italic">No hay pasos de preparación definidos.</p>
                }
             </section>
