--- a/src/app/features/recetas/pages/recipe-edit-page/recipe-edit-page.component.html
+++ b/src/app/features/recetas/pages/recipe-edit-page/recipe-edit-page.component.html
@@ -41,9 +41,18 @@
         <label for="descripcion" class="block text-sm font-medium text-gray-700">Descripción Corta</label>
         <textarea id="descripcion" formControlName="descripcion" rows="3" class="mt-1 block w-full rounded border-gray-400 shadow-sm"></textarea>
       </div>
-      <div>
+      <!-- <div>
         <label for="preparacion" class="block text-sm font-medium text-gray-700">Pasos de Preparación</label>
         <textarea id="preparacion" formControlName="preparacion" rows="8" class="mt-1 block w-full rounded border-gray-400 shadow-sm"></textarea>
+      </div> -->
+      <div>
+        <label for="preparacion" class="block text-sm font-medium text-gray-700 mb-1">Pasos de Preparación</label>
+        <quill-editor
+          id="preparacion"
+          formControlName="preparacion"
+          placeholder="Describe los pasos para preparar tu receta..."
+          [styles]="{ 'min-height': '200px' }">
+        </quill-editor>
       </div>
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
